Firefox issues fixed! Inventory icons and alignements fixed!

--- a/assets/styles/buildkit.css
+++ b/assets/styles/buildkit.css
@@ -1873,6 +1873,26 @@ button[disabled]{
     cursor:pointer;
 }
 
+.md-container-modify{
+    width: 80px;
+}
+.md-container-modify .md-char-counter{
+    font-size:9px;
+}
+
+@-moz-document url-prefix() {
+   md-input-container .md-input {
+      border-bottom-style: solid;
+   }
+ }
+
+.gylphycon-treegrid{
+    font-size: 14px;
+    color: #c3c3c3;
+}
+.gylphycon-treegrid:empty{
+    width: 20px;
+}
 
 /*Making a theme. Add your specified colors here. define as color... */
 
